--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@toast-ui/react-editor": "^3.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-magnify": "^2.7.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.0.1",
